--- a/app/assets/stylesheets/casebook.scss
+++ b/app/assets/stylesheets/casebook.scss
@@ -185,7 +185,7 @@ form.edit_content_resource, form.edit_content_section, form.edit_content_caseboo
       }
       font-size: 32px;
       .case {
-        @include serif-headline($regular, 43px, 51px);
+        @include serif-text($regular, 43px, 51px);
         .title-metadata {
           font-weight: bold;
           color: $light-blue;
@@ -242,16 +242,19 @@ form.edit_content_resource, form.edit_content_section, form.edit_content_caseboo
 
   section.headnote {
     margin: 20px 30px 30px 30px;
+    @include sans-serif($regular, 18px, 31px);
+  }
+  section.resource {
+    @include serif-text($regular, 18px, 31px);
   }
 
   section.headnote, section.resource {
-    @include sans-serif($regular, 18px, 31px);
     h5 {
       font-size: 14px;
       margin: 30px 0px 15px 0px;
     }
     h3 {
-      @include sans-serif($medium, 24px, 27px);
+      @include serif-text($medium, 24px, 27px);
       margin: 10px 0;
       color: $orange;
     }
@@ -273,6 +276,12 @@ form.edit_content_resource, form.edit_content_section, form.edit_content_caseboo
   }
 
   .authorship {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 12px;
+
     .collaborators {
       display: inline-block;
       .add-collaborator {
@@ -299,10 +308,8 @@ form.edit_content_resource, form.edit_content_section, form.edit_content_caseboo
     }
 
     .root-attribution {
-      text-align: right;
       font-size: 13px;
       display: inline-block;
-      float: right;
     }
   }
 
